k8s/node-demo-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: node-dep
  labels:
    app: node-demo-app
spec:
  selector:
    matchLabels:
      app: node-demo-app
  replicas: 1
  template:
    metadata:
      labels:
        app: node-demo-app
    spec:
      containers:
      - name: node
        image: howmun/jenkins-docker-example:_BUILD_NUMBER_
        - containerPort: 3000
